--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
 
     <body>
 
-        <h1>The Great <span id="colorDisplay">RGB</span> Color Game</h1>
+        <h1>The Great 
+            <br>
+            <span id="colorDisplay">RGB</span>
+            <br>
+            Color Game
+        </h1>
 
         <div id="stripe">
             <button id="reset">New Color</button>
             <span id="message"></span>
+            <button id="easyBtn" >Easy</button>
+            <button id="hardBtn" class="selected"> Hard</button>
         </div>
 
         <div id="container">
