--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title> Game Color </title>
         <link rel="stylesheet" href="colorgame.css">
-        <link rel="shortcut icon" href="favicon-32x32.png">
+        <link rel="shortcut icon" href="download.png">
     </head>
 
     <body>
