--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </h1>
 
         <div id="stripe">
-            <button id="reset">New Color</button>
+            <button id="reset">New Colors</button>
             <span id="message"></span>
             <button id="easyBtn" >Easy</button>
             <button id="hardBtn" class="selected"> Hard</button>
